--- a/package.json
+++ b/package.json
@@ -63,12 +63,14 @@
         "react-day-picker": "^9.6.7",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^6.0.0",
+        "react-force-graph-3d": "^1.29.1",
         "react-hook-form": "^7.54.2",
         "react-resizable-panels": "^2.1.7",
         "recharts": "^2.15.1",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
         "three": "^0.175.0",
+        "three-spritetext": "^1.10.0",
         "tw-animate-css": "^1.2.4",
         "uuid": "^11.1.0",
         "vaul": "^1.1.2",
@@ -76,6 +78,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@playwright/test": "^1.58.2",
         "@tailwindcss/postcss": "^4.1.8",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
